--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <h1>Demand</h1>
       </div>
       <div class="box-two">
-        Get Started
+        <p>Get Started</p>
       </div>
     </div>
     <div class="box-content-two">
-      <img src="img/header-img.png" alt="Image of a code snippet.">
+      <img class="header-image" src="img/header-img.png" alt="Image of a code snippet.">
     </div>
   </div>
   <hr>  
